k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: springboot-service
  namespace: springboot

spec:

  selector:
    app: springboot

  ports:

  - port: 80
    targetPort: 8080

  type: LoadBalancer
